--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
+    "nodemon": "^2.0.3",
     "sequelize": "^4.41.2"
   }
 }
