--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.3",
