--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "post-author-joins",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +15,16 @@
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.3",
-    "sequelize": "^4.41.2"
-  }
+    "sequelize": "^4.44.4"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BBoutet1/project2_daily-carpool.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BBoutet1/project2_daily-carpool/issues"
+  },
+  "homepage": "https://github.com/BBoutet1/project2_daily-carpool#readme",
+  "description": ""
 }
