--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "browserify": "^16.5.1",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.3",
