--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "browserify": "^16.5.1",
-    "cors": "^2.8.5",
     "express": "^4.16.3",
+    "express-handlebars": "^4.0.4",
     "jquery": "^3.5.1",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.3",
